# logos

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  x86_64-logos.json
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: benchmarks.json  unsafe-audit.md
kernel/: Cargo.toml  linker.ld
kernel/src/: fault.rs  log.rs  main.rs  panic.rs  test_framework.rs
kernel/src/arch/x86_64/: apic.rs  context.rs  cpu.rs  gdt.rs  idt.rs  interrupts.rs  io.rs  mod.rs  percpu.rs  pic.rs  smp.rs  syscall.rs
kernel/src/drivers/: ahci.rs  font8x16.raw  framebuffer.rs  keyboard.rs  mod.rs  pci.rs  serial.rs
kernel/src/drivers/virtio/: block.rs  mod.rs
kernel/src/entropy/: chacha20.rs  mod.rs
kernel/src/fs/: block_cache.rs  devfs.rs  fd.rs  mod.rs  path.rs  procfs.rs  tmpfs.rs  vfs.rs
kernel/src/fs/ext2/: mod.rs  ondisk.rs
kernel/src/ipc/: mod.rs  pipe.rs  shm.rs
kernel/src/memory/: addr.rs  cow.rs  heap.rs  mod.rs  oom.rs  paging.rs  pmm.rs  slab.rs  vmm.rs
kernel/src/process/: address_space.rs  elf.rs  exec.rs  mod.rs  pid.rs  signal.rs  task.rs
kernel/src/sched/: mod.rs
kernel/src/shell/: builtins.rs  mod.rs
kernel/src/sync/: mod.rs  mutex.rs  rwlock.rs  spinlock.rs  waitqueue.rs
kernel/src/syscall/: errno.rs  mod.rs  table.rs  validate.rs
kernel/src/timer/: mod.rs
kernel/src/tty/: mod.rs
scripts/: check-unsafe-audit.sh  run-kernel-tests.sh
tests/: serial_harness.py
tests/host/: Cargo.toml
tests/host/src/: lib.rs  (+59 more)
tools/: fetch-limine.sh  mkimage-noroot.sh  mkimage.sh
userspace/: user.ld
userspace/coreutils/: Cargo.toml
(+44 files in other folders)
