[package]
name = "logos-coreutils"
version = "0.1.0"
edition = "2021"

[dependencies]
liblogos = { path = "../liblogos" }

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[[bin]]
name = "uname"
path = "src/bin/uname.rs"

[[bin]]
name = "true"
path = "src/bin/true.rs"

[[bin]]
name = "false"
path = "src/bin/false.rs"
